/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package com.mycompany.ajedrez;

/**
 *
 * @author a22leonardofa
 */
public enum ColorPieza {

    BLANCA, NEGRA

}
